# Todo-hackathon

./: .gitignore  README.md  pyproject.toml  tmp_constitution.md  tmp_constitution_with_report.md
history/prompts/001-console-todo-app/: 1-analyze-tasks.tasks.prompt.md  1-execute-implementation-plan.green.prompt.md
history/prompts/console-todo-app/: 2-create-console-todo-app-spec.spec.prompt.md  3-create-implementation-plan.plan.prompt.md  4-generate-implementation-tasks.tasks.prompt.md
history/prompts/constitution/: 1-create-hackathon-project.constitution.prompt.md
history/prompts/recurring-tasks-reminders/: 1-advanced-todo-cli-app-spec.spec.prompt.md  2-advanced-todo-cli-plan.plan.prompt.md  3-advanced-todo-cli-tasks.tasks.prompt.md  4-advanced-todo-cli-implementation.green.prompt.md
specs/001-console-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-console-todo-app/checklists/: requirements.md
specs/001-console-todo-app/contracts/: functions.md
specs/001-todo-app-enhancement/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-app-enhancement/checklists/: requirements.md
specs/001-todo-app-enhancement/contracts/: todo-contract.md
specs/002-recurring-tasks-reminders/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-recurring-tasks-reminders/checklists/: requirements.md
src/: main.py  todo.py
src/cli/: todo_app.py
src/models/: task.py
src/services/: date_parser.py  recurrence.py  reminder.py  task_service.py
(+1 files in other folders)
